# UltraSinger

./: .gitignore  README.md  ReleaseNotes.md  conftest.py  docker-compose.yml  pyproject.toml  run_gui_on_linux.sh  run_gui_on_mac.command  run_gui_on_windows.bat  run_on_linux.sh  run_on_mac.command  run_on_windows.bat
.github/workflows/: build-container-image.yml  tests.yml
container/: README.md  compose-cpu.yml  docker.md  podman.md
docs/: library-triage.md  remote-stt-design.md
install/: README.md  auto_install.bat  auto_install.sh  create_desktop_shortcut.bat  install.bat  install.sh  setup_potoken_provider.bat  setup_potoken_provider.sh  update.bat  update.sh
install/CPU/: linux_cpu.sh  macos_cpu.sh  windows_cpu.bat
install/CUDA/: linux_cuda_gpu.sh  windows_cuda_gpu.bat
install/helpers/: create_gui_shortcut.ps1  ensure_ffmpeg.bat  ensure_ffmpeg.sh  setup_potoken_provider.bat  setup_potoken_provider.sh
pytest/: test_UltraSinger.py
pytest/gui/: test_freestyle_threshold_widgets.py  test_media_interceptor.py  test_potoken_provider.py  test_proxy_settings_widgets.py  test_queue_result_info.py  test_remote_stt_model_dropdown.py  test_remote_stt_retry_widgets.py  test_ytdlp_updater.py
pytest/modules/: test_lrclib_client.py  test_musicbrainz_client.py  test_proxy_setup.py  test_uscore_report.py
pytest/modules/Audio/: test_bpm.py  test_metadata.py  test_onset_correction.py  test_separation.py  test_video_platform.py  test_youtube.py  test_youtube_subtitles.py
pytest/modules/DeviceDetection/: test_device_detection.py
pytest/tools/: test_compare_ultrastar.py  test_library_rescore.py  test_library_triage.py  test_regression_benchmark.py
src/: Settings.py  UltraSinger.py  gui_main.py
src/gui/: __init__.py  browser_tab.py  config.py  cookie_manager.py  main_window.py  media_downloader.py  media_interceptor.py  models.py  potoken_provider.py  preferences_tab.py  queue_manager.py  queue_tab.py  secrets.py  settings_dialog.py  settings_tab.py  ultrasinger_runner.py  ytdlp_updater.py
src/gui/widgets/: sidebar.py  (+8 more)
src/modules/: ProcessData.py  common_print.py  ffmpeg_helper.py  init_interactive_mode.py  lrclib_client.py  musicbrainz_client.py  plot.py  proxy_setup.py  uscore_report.py
src/test/: test_gui_secrets.py
tools/: compare_ultrastar.py  fix_ultrastar_compatibility.py  library_rescore.py  library_triage.py  panns_growl_poc.py  pitch_tracker_benchmark.py  regression_benchmark.py
(+52 files in other folders)
