[build-system]
requires = ["hatchling", "setuptools", "wheel", "setuptools_scm"]
build-backend = "hatchling.build"

[project]
name = "UltraSinger"
version = "0.1.0.dev1"
description = "A tool to create UltraStar karaoke files from audio files"
requires-python = ">=3.12,<3.14"
dependencies = [
    "setuptools",
    "truststore>=0.10",
    "scipy",
    "whisperx",
    "num2words",
    "inputimeout",
    "langcodes",
    "language_data",
    "packaging",
    "librosa",
    "swift-f0",
    "pydub",
    "demucs",
    "ffmpeg-python",
    "matplotlib",
    "musicbrainzngs",
    "python-Levenshtein",
    "pretty-midi",
    "unidecode",
    "pyhyphen",
    "tqdm",
    "yt-dlp[default]>=2026.6.9",
    "deno",
    "music21",
    "dataclasses",
    "dataclasses-json",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "torchfcpe>=0.0.4",
    "audio-separator>=0.25",
    # chardet 6+/7+ breaks an implicit dependency of requests and can prevent
    # UltraSinger from starting (upstream fix, rakuri255/UltraSinger#324)
    "chardet<6.0.0",
]

[project.optional-dependencies]
windows = []
linux = []
macos = []
scoring = ["ultrastar-score>=0.2.0,<0.3.0"]
# yt-dlp PO-token plugin: fetches GVS Proof-of-Origin tokens from a local
# bgutil provider server so YouTube serves the full format list instead of
# the limited 360p fallback. Requires a provider server (Docker or Node.js);
# see the README and src/gui/potoken_provider.py.
potoken = ["bgutil-ytdlp-pot-provider>=1.1"]
gui = [
    "PySide6>=6.8",
    "keyring>=25.0",
]
dev = ["pytest", "isort", "black", "pylint"]

[dependency-groups]
dev = ["pytest", "isort", "black", "pylint"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
  "src",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch" }]
torchaudio = [{ index = "pytorch" }]
torchvision = [{ index = "pytorch" }]

[tool.uv]
# torchcodec (pulled in by pyannote-audio) is incompatible with PyTorch 2.8.x
# on Windows (DLL init crash at shutdown). pyannote-audio gracefully falls back
# to torchaudio when torchcodec is absent, so no functionality is lost.
override-dependencies = ["torchcodec; python_version < '0'"]
